<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent">

    <TextView
        android:id="@+id/dilog_tv_shuoming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_theme_color"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/text_rwzx_shuoming"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dialog_tv_jifen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dilog_tv_shuoming"
        android:background="@color/white"
        android:padding="30dp"
        android:text="@string/text_rwzx_jifen"
        android:textColor="@color/color_line_bg" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_tv_jifen"
        android:paddingBottom="100dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/text_rwzx_xianjinquan"
        android:textColor="@color/color_line_bg" />
</RelativeLayout>
