<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_listview_divider"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.coco3g.caopantx.view.TopBarView
        android:id="@+id/chongzhi_topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@color/transparent"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/text_chongzhi_yue"
            android:textColor="@color/app_text_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tixian_tv_all_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@color/transparent"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="1000元"
            android:textColor="@color/app_text_color"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/shape_linearlayout"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="30dp"
            android:background="@color/transparent"
            android:drawableLeft="@mipmap/pic_tixian_txje"
            android:drawablePadding="8dp"
            android:hint="@string/text_chongzhi_hint_outoften"
            android:inputType="number"
            android:lines="1"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:textSize="15sp" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_loginbtn_bg"
        android:padding="10dp"
        android:text="@string/text_chongzhi_confirm"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_chongzhi_tishi"
        android:textColor="@color/color_line_bg"
        android:textSize="15sp" />
</LinearLayout>
