<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_activity_bg"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.coco3g.caopantx.view.TopBarView
        android:id="@+id/jfsc_topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="20dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/jfsc_tv_keyongjifen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/app_theme_color"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/jfsc_dongjiejifen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/app_theme_color"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="20dp"
        android:paddingTop="5dp"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/text_jfsc_keyongjifen"
            android:textColor="@color/color_line_bg"
            android:textSize="15sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/text_jfsc_dongjiejifen"
            android:textColor="@color/color_line_bg"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_jfsc_duihuan"
        android:textSize="15sp" />

    <ListView
        android:id="@+id/jfsc_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/transparent"
        android:listSelector="@color/transparent" />
</LinearLayout>
